# custom-bpe-tokenizer

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
data/: sample_corpus.txt
examples/: api_client_demo.py  benchmark_tokenizers.py  compare_with_huggingface.py  encode_decode_demo.py  train_byte_bpe.py  train_tokenizer.py  train_unigram.py  train_wordpiece.py
notebooks/: tokenizer_analysis.ipynb
src/tokenizer/: __init__.py  api.py  base.py  benchmark.py  bpe.py  byte_bpe.py  cli.py  preprocessing.py  serialization.py  unigram.py  utils.py  vocabulary.py  wordpiece.py
tests/: test_api.py  test_benchmark.py  test_bpe.py  test_byte_bpe.py  test_cli.py  test_preprocessing.py  test_serialization.py  test_unigram.py  test_vocabulary.py  test_wordpiece.py
