[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-bpe-tokenizer"
version = "0.2.0"
description = "Advanced from-scratch tokenizer engineering project with BPE, byte-level BPE, WordPiece, unigram, API, app, and benchmarks."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Portfolio Project" }
]
dependencies = [
  "tqdm>=4.66",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.0",
  "streamlit>=1.32",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "httpx>=0.27",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27"]
hf = ["transformers>=4.40"]

[project.scripts]
custom-bpe-tokenizer = "tokenizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
